fix(layout): 🐛 improve page header wrapping and command palette scrolling

--- a/resources/skins.citizen.styles/components/PageHeader.less
+++ b/resources/skins.citizen.styles/components/PageHeader.less
@@ -48,7 +48,7 @@
 .firstHeading {
 	margin-block: 0;
 	line-height: 2rem; // Reduced line height to make the heading more compact
-	overflow-wrap: break-word;
+	overflow-wrap: anywhere;
 }
 
 .mw-page-title {
